# e2e-quantus-apps

./: .gitignore  example_usage.dart  melos.yaml
.github/workflows/: ci.yaml  create_miner_build.yml  create_miner_release_proposal.yml  create_wallet_android_build.yml  e2e-mobile.yaml  patrol_android_ftl.yml  publish_miner_release.yml  test_tagging.yml  test_windows_build.yml
captcha/: README.md
captcha/demo/: index.html
captcha/scripts/: build-solver.sh
captcha/widget/: quan-captcha.js  solver-worker.js
cold-wallet-app/: README.md  analysis_options.yaml  pubspec.yaml
cold-wallet-app/android/: build.gradle.kts
cold-wallet-app/android/app/: build.gradle.kts
cold-wallet-app/assets/text/: human_checkphrase_final_wordlist.txt
cold-wallet-app/ios/Runner/: Info.plist
cold-wallet-app/ios/Runner.xcodeproj/: project.pbxproj
cold-wallet-app/lib/: app.dart  main.dart
cold-wallet-app/lib/components/: animated_ur_qr.dart  back_button.dart  base_background.dart  glass_button_base.dart  loader.dart  mnemonic_grid.dart  quantus_button.dart  quantus_qr.dart  scaffold_base.dart  scaffold_base_bottom_content.dart  v2_app_bar.dart
cold-wallet-app/lib/providers/: connectivity_provider.dart  wallet_providers.dart
cold-wallet-app/lib/screens/: create_wallet_screen.dart  home_screen.dart  import_wallet_screen.dart  lock_screen.dart  root_gate.dart  scan_transaction_screen.dart  secure_element_warning_screen.dart  set_password_screen.dart  show_key_screen.dart  sign_transaction_screen.dart  welcome_screen.dart
cold-wallet-app/lib/services/: cold_auth_service.dart  vault_service.dart
cold-wallet-app/lib/shared/: context_extensions.dart
cold-wallet-app/lib/theme/: app_colors.dart  app_text_styles.dart  app_theme.dart
cold-wallet-app/lib/widgets/: connectivity_guard.dart  lock_overlay.dart  password_field.dart
cold-wallet-app/test/: transaction_signing_test.dart
debate-tree/: PLAN.md
debate-tree/spike/: index.html  prompts.mjs  server.mjs
miner-app/: .metadata  analysis_options.yaml  flutter_launcher_icons.yaml  pubspec.yaml  reset_app.sh  run_miner.sh
miner-app/lib/: main.dart
miner-app/linux/: CMakeLists.txt
miner-app/linux/runner/: my_application.cc
miner-app/macos/Runner/: DebugProfile.entitlements  Info.plist  Release.entitlements
miner-app/macos/Runner.xcodeproj/: project.pbxproj
miner-app/test/: external_miner_test.dart  miner_wallet_service_test.dart
miner-app/windows/: CMakeLists.txt
miner-app/windows/runner/: Runner.rc  main.cpp
mobile-app/: DATA_FLOW.md  analysis_options.yaml  firebase.json  fix_ios_build.sh  flutter_launcher_icons.yaml  paste_to_simulator.sh  pubspec.yaml  run_on_device.sh  upload_ios_build.sh
mobile-app/android/: build.gradle  gradle.properties  settings.gradle
mobile-app/android/app/: build.gradle
mobile-app/docs/: Quests Functional Spec.md  User Flows Abstract.md  User Flows Implementation.md
mobile-app/ios/: Podfile  TestPlan.xctestplan
mobile-app/ios/Runner/: AppDelegate.swift  GoogleService-Info.plist  Info.plist  Runner.entitlements
mobile-app/ios/Runner.xcodeproj/: project.pbxproj
mobile-app/ios/RunnerUITests/: RunnerUITests.m
mobile-app/lib/: app.dart  app_initializer.dart  app_lifecycle_manager.dart  firebase_options.dart  main.dart  routes.dart  wallet_initializer.dart
mobile-app/lib/bootstrap/: app_bootstrap.dart
mobile-app/lib/l10n/: app_de.arb  app_en.arb  app_hi.arb  app_id.arb  app_localizations.dart  app_localizations_de.dart  app_localizations_en.dart  app_localizations_hi.dart  app_localizations_id.dart  app_localizations_ru.dart  app_localizations_zh.dart  app_ru.arb  app_zh.arb
mobile-app/lib/models/: app_locale.dart  combined_transactions_list.dart  fiat_currency.dart  filtered_transactions_params.dart  notification_models.dart  pagination_state.dart  pending_cancellation.dart  pending_multisig_creation_record.dart  referral_data.dart  supported_currency.dart  transaction_role.dart  wallet_state_manager.dart
mobile-app/lib/providers/: account_associations_providers.dart  account_id_list_cache.dart  account_providers.dart  account_stats_providers.dart  active_account_transactions_provider.dart  all_transactions_provider.dart  connectivity_provider.dart  l10n_provider.dart  (+30 more)
mobile-app/patrol_test/: README.md  test_bundle.dart
mobile-app/scripts/: patrol_android_emulator.sh  patrol_android_ftl.sh  patrol_ios_device.sh  patrol_ios_simulator.sh
mobile-app/test/: extensions.dart
mobile-app/tool/: generate_version.sh
quantus_sdk/: .gitignore  analysis_options.yaml  dart_test.yaml  pubspec.yaml  regenerate_everything.sh  run_tests.sh
quantus_sdk/lib/: quantus_sdk.dart
quantus_sdk/rust/: Cargo.toml  build.rs  rust-toolchain
quantus_sdk/rust/src/: frb_generated.rs
quantus_sdk/rust/src/api/: crypto.rs  mod.rs  multisig.rs  ur.rs  wormhole.rs
quantus_sdk/rust_builder/: pubspec.yaml
quantus_sdk/rust_lib_resonance_network_wallet.framework/: rust_lib_resonance_network_wallet
quantus_sdk/test/: build_library.sh  chain_history_service_test.dart  generate_keys_test.dart  locale_amount_parsing_test.dart  multisig_service_test.dart  quantus_payload_parser_test.dart
rust-transaction-parser/: Cargo.toml
rust-transaction-parser/src/: lib.rs
scripts/: debug_subsquid.sh  melos_bootstrap.sh  run_analyzer.sh  tail_miner_node__logs.sh
(+614 files in other folders)
