[package]
name = "rust_lib_resonance_network_wallet"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
# Quantus CLI as library for wormhole proof generation
# Using path dependency to ensure we get the exact same implementation
quantus-cli = { path = "../../../quantus-cli", default-features = false }

# Quantus chain dependencies (from crates.io)
qp-poseidon = { version = "1.4.0", default-features = false }
qp-poseidon-core = { version = "1.4.0", default-features = false }
qp-rusty-crystals-dilithium = { version = "2.4", default-features = false }
qp-rusty-crystals-hdwallet = { version = "2.3" }

# ZK proof generation for wormhole withdrawals (from crates.io)
qp-wormhole-circuit = { version = "1.3.0", default-features = false, features = ["std"] }
qp-wormhole-prover = { version = "1.3.0", default-features = false, features = ["std"] }
qp-wormhole-aggregator = { version = "1.3.0", default-features = false, features = ["rayon", "std"] }
qp-wormhole-inputs = { version = "1.3.0", default-features = false, features = ["std"] }
qp-zk-circuits-common = { version = "1.3.0", default-features = false, features = ["std"] }
qp-wormhole-circuit-builder = { version = "1.3.0", default-features = false }
plonky2 = { package = "qp-plonky2", version = "1.1.6", default-features = false, features = ["std"] }

# Serialization for proof config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

flutter_rust_bridge = "=2.11.1"
hex = "0.4.3"
log = "0.4"
nam-tiny-hderive = "0.3.1-nam.0"
sp-core = "35.0.0"
quantus_ur = { git = "https://github.com/Quantus-Network/quantus_ur.git", tag = "1.1.0" }

# Substrate codec for storage proof processing
codec = { package = "parity-scale-codec", version = "3.7", features = ["derive"] }

# Force std feature on sp-externalities to fix thread_local macro issue
sp-externalities = { version = "0.31", features = ["std"] }

[build-dependencies]
qp-wormhole-circuit-builder = { version = "1.3.0", default-features = false }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

# Optimize build scripts and their dependencies in dev mode.
# This is critical for circuit generation which is CPU-intensive.
# Without this, circuit generation takes ~10 minutes instead of ~30 seconds.
[profile.dev.build-override]
opt-level = 3

[profile.release.build-override]
opt-level = 3
