[package]
name = "rust_lib_resonance_network_wallet"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
# NOTE: Quantus chain dependencies.
qp-poseidon = "1.1.0"
qp-rusty-crystals-dilithium = { version = "2.1.0", default-features = false }
qp-rusty-crystals-hdwallet = { version = "2.1.0" }

flutter_rust_bridge = "=2.11.1"
hex = "0.4.3"
nam-tiny-hderive = "0.3.1-nam.0"
sp-core = { version = "39.0.0", default-features = true}
quantus_ur = { git = "https://github.com/Quantus-Network/quantus_ur.git", tag = "1.1.0" }

## This dependency has been yanked but sp-core depends on version 0.1.1... so we add it with a patch
[patch.crates-io]
ark-vrf = { git = "https://github.com/davxy/ark-vrf", tag = "v0.1.1" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
